--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "Do Not Track",
   "version": "1.0.0",
-  "author": "Zerebos",
-  "authorId": "249746236008169473",
+  "author": {
+    "name": "Zerebos",
+    "id": "249746236008169473"
+  },
   "description": "Blocks all requests to Discord analytics endpoints.",
   "icon": "assets/icon.png",
-  "color": "#e8e8e8",
   "license": "MIT"
 }
